src/test/ui/layout/unnormalized-type-layout-ice.stderr
error: layout error: Unknown(<() as Foo>::Bar)
  --> $DIR/unnormalized-type-layout-ice.rs:11:1
   |
LL | type Invalid = <() as Foo>::Bar;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

